--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,12 +12,11 @@ jobs:
       - image: circleci/ruby:2.4.1
     steps:
       - checkout
-      - run: echo "A second hello"  
+      - run: echo "A more familiar hi"
       - run: sleep 15
-      
-  workflows:
-    version: 2
-    one_and_two:
-      jobs:
-        - one
-        - two
+workflows:
+  version: 2
+  one_and_two:
+    jobs:
+      - one
+      - two
