--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,9 @@
-version: 2.1
+version: 2
+jobs:
+  build:
+    docker:
+      - image: circleci/node:4.8.2
 
-orbs:
-  hello:  circleci/hello-build@0.0.7
-
-workflows:
-  "Hello Workflow":
-    jobs:
-      - hello/hello-build
+    steps:
+      - checkout
+      - run: echo "Hello World"
