--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,9 +29,9 @@ jobs:
 
       # Create Postgres users and database
       # Note the YAML heredoc '|' for nicer formatting
-      - run: |
-          sudo -u root createuser -h localhost --superuser ubuntu &&
-          sudo createdb -h localhost test_db
+      #- run: |
+      #    sudo -u root createuser -h localhost --superuser ubuntu &&
+      #    sudo createdb -h localhost test_db
 
       - restore_cache:
           keys:
