--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,47 +45,11 @@ jobs:
           command: |
             set -xu
             mkdir -p ${TEST_REPORTS}
-            run-tests.sh
-            cp out/tests/*.xml ${TEST_REPORTS}
-
-      - run: |
-          set -xu
-          mkdir -p /tmp/artifacts
-          create_jars.sh ${CIRCLE_BUILD_NUM}
-          cp *.jar /tmp/artifacts
-
-      - save_cache:
-          key: v1-my-project-{{ checksum "project.clj" }}
-          paths:
-            - ~/.m2
-
-      # Save artifacts
-      - store_artifacts:
-          path: /tmp/artifacts
-          destination: build
-
-      # Upload test results
-      - store_test_results:
-          path: /tmp/test-reports
-
-  deploy-stage:
-    docker:
-      - image: ubuntu:14.04
-    working_directory: /tmp/my-project
-    steps:
-      - run:
-          name: Deploy if tests pass and branch is Staging
-          command: ansible-playbook site.yml -i staging
-
-  deploy-prod:
-    docker:
-      - image: ubuntu:14.04
-    working_directory: /tmp/my-project
-    steps:
-      - run:
-          name: Deploy if tests pass and branch is Master
-          command: ansible-playbook site.yml -i production
-
+            touch ${TEST_REPORTS}/test.sh
+            chmmod u+x ${TEST_REPORTS}/test.sh
+            echo "echo Hello World!" > ${TEST_REPORTS}/test.sh
+            bash ${TEST_REPORTS}/test.sh > ${TEST_REPORTS}/ouput
+            
 workflows:
   version: 2
   build-deploy:
@@ -96,15 +60,3 @@ workflows:
               ignore:
                 - develop
                 - /feature-.*/
-      - deploy-stage:
-          requires:
-            - build
-          filters:
-            branches:
-              only: staging
-      - deploy-prod:
-          requires:
-            - build
-          filters:
-            branches:
-              only: master
